tests/error/move_move_reference.bz
// error: operator move cannot be applied to a reference
function test(i: move i32)
{
	move i;
}
